test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/compound_mod.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(d)
  =
  const double(5.0)
  ;
  identifier(d)
  %=
  const int(2)
  ;
  return
  (
  int
  )
  identifier(d)
  ;
  }
